<resources>
    <string name="app_name">ezIT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ezit">New ezIT</string>
    <string name="event_name">ezit name</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_enddate">End Date</string>
    <string name="event_endtime">End Time</string>
    <string name="event_description">Description</string>
    <string name="hintTxtItem">Enter an item here ...</string>
        
    <string name="lblBtnAdd">Add Item</string>
        
    <string name="txtEmpty">List is empty</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pseudo">Pseudo</string>
    <string name="prompt_pseudo">Nickname</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="title_activity_display_ezit">DisplayEzitActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_win">Win</string>
</resources>
