<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neilvyn.ezitclean.EzitActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/event_name"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name"
                    android:inputType="textPersonName"
                    android:layout_width="fill_parent">
                </EditText>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_date"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_date"
                    android:inputType="textPersonName"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent">
                </EditText>


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_time"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_time"
                    android:inputType="textPersonName"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent">
                </EditText>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_enddate"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_enddate"
                    android:inputType="textPersonName"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent">
                </EditText>


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_endtime"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_endtime"
                    android:inputType="textPersonName"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent">
                </EditText>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_description"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description"
                    android:inputType="textMultiLine"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent">
                </EditText>

            </android.support.design.widget.TextInputLayout>
            <EditText
                android:id="@+id/txtItem"
                android:layout_width="581dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hintTxtItem"
                />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblBtnAdd"
                android:layout_toRightOf="@id/txtItem"
                />

            <ListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="170dp"
                android:layout_below="@id/txtItem" />

            <TextView
                android:id="@android:id/empty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtItem"
                android:text="@string/txtEmpty"
                android:gravity="center_horizontal"
                />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:src="@android:drawable/ic_dialog_email"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
