<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">
        <EditText
            android:id="@+id/event_name"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/event_date"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/event_time"
            android:layout_height="wrap_content"
            android:hint="@string/event_time"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/event_deadline"
            android:layout_height="wrap_content"
            android:hint="@string/event_deadline"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
    </LinearLayout>
</ScrollView>