<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.neilvyn.ezitclean.DisplayEzitActivity"
    tools:showIn="@layout/activity_display_ezit">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/event_name"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name"
                    android:inputType="textPersonName"
                    android:layout_width="fill_parent"
                    android:enabled="false">
                </EditText>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_date"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_date"
                    android:inputType="textPersonName"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent"
                    android:enabled="false">
                </EditText>


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_enddate"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_enddate"
                    android:inputType="textPersonName"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent"
                    android:enabled="false">
                </EditText>


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/event_description"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description"
                    android:inputType="textMultiLine"
                    android:layout_weight=".5"
                    android:layout_width="fill_parent"
                    android:enabled="false">
                </EditText>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
